Fixed stuck in loading screen, reduced header size

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,27 +1,26 @@
-
-body{
-  font-family: 'Courier New', Courier, monospace;
+body {
+	font-family: "Courier New", Courier, monospace;
 }
 .App {
-  text-align: center;
+	text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
+	height: 40vmin;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  font-family: 'Courier New', Courier, monospace;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
+	font-family: "Courier New", Courier, monospace;
 }
 
 .App-link {
-  color: #09d3ac;
+	color: #09d3ac;
 }
